--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Time Value Awareness — Golden</title>
+<title>Time Value Awareness — Live</title>
 
 <style>
   :root {
@@ -12,11 +12,10 @@
     --border: rgba(0,0,0,0.08);
     --text: #111;
     --muted: rgba(0,0,0,0.55);
-
     --live: #ef4444;
-    --gold: #f59e0b;
-    --gold-soft: rgba(245,158,11,0.25);
-    --gold-glow: rgba(245,158,11,0.45);
+
+    --normal-bar: linear-gradient(90deg, #3b82f6, #ef4444);
+    --golden-bar: linear-gradient(90deg, #facc15, #f59e0b);
   }
 
   @media (prefers-color-scheme: dark) {
@@ -39,69 +38,33 @@
 
   .container {
     max-width: 320px;
-    border-radius: 16px;
+    border-radius: 14px;
     padding: 14px 16px;
     background: var(--card);
     box-shadow: 0 0 0 1px var(--border);
-    transition: all 0.8s ease;
-    position: relative;
-    overflow: hidden;
-  }
-
-  /* 🌟 GOLDEN MODE */
-  .golden-mode {
-    box-shadow:
-      0 0 0 1px rgba(245,158,11,0.5),
-      0 0 18px var(--gold-glow);
-  }
-
-  .golden-mode::after {
-    content: "";
-    position: absolute;
-    inset: 0;
-    background: linear-gradient(
-      120deg,
-      transparent 20%,
-      rgba(245,158,11,0.08) 40%,
-      transparent 60%
-    );
-    animation: shimmer 6s linear infinite;
-    pointer-events: none;
-  }
-
-  @keyframes shimmer {
-    0% { transform: translateX(-100%); }
-    100% { transform: translateX(100%); }
   }
 
   .title {
     font-size: 13px;
-    opacity: .8;
+    opacity: .75;
     margin-bottom: 10px;
     display: flex;
     align-items: center;
     gap: 6px;
   }
 
-  /* 🔴 / 🌟 Live Dot */
+  /* 🔴 Live Dot */
   .live-dot {
     width: 8px;
     height: 8px;
     border-radius: 50%;
     background: var(--live);
     animation: pulse 1.2s ease-in-out infinite;
-    transition: background 0.6s ease, box-shadow 0.6s ease;
-  }
-
-  .golden-mode .live-dot {
-    background: var(--gold);
-    box-shadow: 0 0 10px var(--gold-glow);
-    animation-duration: 1s;
   }
 
   @keyframes pulse {
     0%   { transform: scale(1); opacity: 1; }
-    50%  { transform: scale(1.4); opacity: .6; }
+    50%  { transform: scale(1.4); opacity: .5; }
     100% { transform: scale(1); opacity: 1; }
   }
 
@@ -119,10 +82,6 @@
   .label { color: var(--muted); }
   .value { font-variant-numeric: tabular-nums; }
 
-  .golden-mode .value {
-    color: var(--gold);
-  }
-
   /* 🌅 Day Progress */
   .day-wrap { margin-top: 14px; }
 
@@ -130,7 +89,7 @@
     display: flex;
     justify-content: space-between;
     font-size: 12px;
-    opacity: .75;
+    opacity: .7;
     margin-bottom: 4px;
   }
 
@@ -145,19 +104,21 @@
   .day-fill {
     height: 100%;
     width: 0%;
-    background: linear-gradient(90deg, #3b82f6, #ef4444);
+    background: var(--normal-bar);
     border-radius: 999px;
-    transition: width 0.6s ease, background 0.6s ease;
+    transition: width 0.6s ease, background 0.6s ease, box-shadow 0.6s ease;
   }
 
-  .golden-mode .day-fill {
-    background: linear-gradient(90deg, #facc15, #f59e0b);
+  /* 🌟 Golden Hour Effect */
+  .golden {
+    background: var(--golden-bar) !important;
+    box-shadow: 0 0 10px rgba(250, 204, 21, 0.6);
   }
 </style>
 </head>
 
 <body>
-<div class="container" id="container">
+<div class="container">
 
   <div class="title">
     Current Time Value
@@ -185,18 +146,19 @@
 
 <script>
   /* 🌟 Golden Hours */
-  const GOLDEN_WINDOWS = [
-    { start: 8,  end: 11 },
+  const GOLDEN_HOURS = [
+    { start: 8, end: 11 },
     { start: 16, end: 18 }
   ];
 
+  /* Exam Dates */
   const EXAM_2026 = new Date(Date.UTC(2026, 4, 2, 24, 0, 0));
   const EXAM_2027 = new Date(Date.UTC(2027, 4, 2, 24, 0, 0));
 
   function format(seconds) {
     seconds = Math.ceil(seconds);
     const d = Math.floor(seconds / 86400); seconds %= 86400;
-    const h = Math.floor(seconds / 3600);  seconds %= 3600;
+    const h = Math.floor(seconds / 3600); seconds %= 3600;
     const m = Math.floor(seconds / 60);
     if (d) return `${d}d ${h}h`;
     if (h) return `${h}h ${m}m`;
@@ -223,13 +185,13 @@
     const percent = (secondsToday / 86400) * 100;
 
     document.getElementById("dayPercent").textContent = percent.toFixed(0) + "%";
-    document.getElementById("dayFill").style.width = percent + "%";
+    const fill = document.getElementById("dayFill");
+    fill.style.width = percent + "%";
 
+    // 🌟 Golden Hour Detection
     const hour = now.getHours();
-    const isGolden = GOLDEN_WINDOWS.some(w => hour >= w.start && hour < w.end);
-
-    document.getElementById("container")
-      .classList.toggle("golden-mode", isGolden);
+    const isGolden = GOLDEN_HOURS.some(g => hour >= g.start && hour < g.end);
+    fill.classList.toggle("golden", isGolden);
   }
 
   updateTimeValue();
