--- a/index.html
+++ b/index.html
@@ -6,40 +6,30 @@
 <title>Time Value — Golden Aura</title>
 
 <style>
-/* =========================================
-   THEME SETTINGS
-   ========================================= */
 :root {
-    --bg-layer: #050505;
-    --bg-gradient: radial-gradient(circle at 50% 0%, #1a1500 0%, #000000 80%);
-    --card-bg: rgba(10, 10, 10, 0.65);
-    --card-border: rgba(255, 215, 0, 0.14);
-    --card-shadow: 
-        0 30px 70px rgba(0,0,0,0.85),
-        inset 0 0 30px rgba(255, 215, 0, 0.03);
+    --bg: radial-gradient(circle at 50% 0%, #1a1500 0%, #000 80%);
+    --card-bg: rgba(10,10,10,0.65);
+    --border: rgba(255,215,0,0.18);
+    --shadow: 0 30px 70px rgba(0,0,0,.9),
+              inset 0 0 25px rgba(255,215,0,.04);
 
-    --text-main: #e8e8e8;
-    --text-muted: rgba(255, 255, 255, 0.5);
-
-    --particle-color: rgba(255, 215, 0, 0.35);
-
-    --bar-bg: rgba(255,255,255,0.08);
+    --text: #e8e8e8;
+    --muted: rgba(255,255,255,.5);
+    --particle: rgba(255,215,0,.35);
+    --bar-bg: rgba(255,255,255,.08);
 }
 
-/* =========================================
-   CORE LAYOUT
-   ========================================= */
+/* ===== LAYOUT ===== */
 body {
     margin: 0;
-    background-color: var(--bg-layer);
-    background-image: var(--bg-gradient);
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+    background: var(--bg);
     min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+    color: var(--text);
     overflow: hidden;
-    color: var(--text-main);
 }
 
 #aura-canvas {
@@ -50,166 +40,219 @@ body {
 
 .container {
     position: relative;
-    z-index: 10;
-    width: 100%;
-    max-width: 340px;
+    z-index: 2;
+    width: 340px;
     padding: 22px;
     border-radius: 20px;
     background: var(--card-bg);
     backdrop-filter: blur(16px);
-    border: 1px solid var(--card-border);
-    box-shadow: var(--card-shadow);
-    animation: breathe-border 18s ease-in-out infinite;
+    border: 1px solid var(--border);
+    box-shadow: var(--shadow);
+    animation: border-breath 18s ease-in-out infinite;
 }
 
-@keyframes breathe-border {
-    0%,100% { border-color: rgba(255,215,0,0.12); }
-    50% { border-color: rgba(255,215,0,0.28); }
+@keyframes border-breath {
+    0%,100% { border-color: rgba(255,215,0,.12); }
+    50%     { border-color: rgba(255,215,0,.3); }
 }
 
-/* =========================================
-   HEADER
-   ========================================= */
+/* ===== HEADER ===== */
 .title {
-    font-size: 13px;
-    font-weight: 600;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    color: #ffd700;
     display: flex;
     justify-content: space-between;
     padding-bottom: 10px;
-    border-bottom: 1px solid rgba(255,255,255,0.08);
+    border-bottom: 1px solid rgba(255,255,255,.08);
 }
 
-.live-badge {
+/* 🔥 MOLTEN TITLE */
+.title-text {
+    font-size: 13px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+
+    background: linear-gradient(
+        120deg,
+        #3b2a00,
+        #8f6a00,
+        #ffd700,
+        #fff2b0,
+        #ffd700,
+        #8f6a00,
+        #3b2a00
+    );
+    background-size: 300% 300%;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+    animation: title-flow 8s ease-in-out infinite;
+}
+
+@keyframes title-flow {
+    0%,100% { background-position: 0% 50%; }
+    50%     { background-position: 100% 50%; }
+}
+
+/* 🔥 LIVE BADGE */
+.live {
     display: flex;
     align-items: center;
     gap: 6px;
     font-size: 11px;
+    font-weight: 700;
+
+    background: linear-gradient(
+        120deg,
+        #4a3500,
+        #ffd700,
+        #fff2b0,
+        #ffd700,
+        #4a3500
+    );
+    background-size: 200% 200%;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+    animation: live-breath 3.5s ease-in-out infinite;
 }
 
-.live-dot {
-    width: 6px;
-    height: 6px;
+@keyframes live-breath {
+    0%,100% { background-position: 0% 50%; }
+    50%     { background-position: 100% 50%; }
+}
+
+/* 🔥 MOLTEN DOT (NOT LED, NOT RED) */
+.dot {
+    width: 7px;
+    height: 7px;
     border-radius: 50%;
-    background: #ffd700;
-    box-shadow: 0 0 8px rgba(255,215,0,0.8);
-    animation: pulse 4s ease-in-out infinite;
+    position: relative;
+
+    background: radial-gradient(
+        circle at 30% 30%,
+        #fff2b0,
+        #ffd700,
+        #8f6a00,
+        #3b2a00
+    );
+
+    box-shadow:
+        0 0 6px rgba(255,215,0,.8),
+        0 0 14px rgba(255,180,0,.35);
+
+    animation: dot-pulse 2.5s ease-in-out infinite;
 }
 
-@keyframes pulse {
-    0%,100% { transform: scale(1); opacity: 1; }
-    50% { transform: scale(1.6); opacity: 0.45; }
+@keyframes dot-pulse {
+    0%,100% {
+        transform: scale(1);
+        box-shadow:
+            0 0 6px rgba(255,215,0,.6),
+            0 0 12px rgba(255,180,0,.25);
+    }
+    50% {
+        transform: scale(1.6);
+        box-shadow:
+            0 0 10px rgba(255,215,0,.9),
+            0 0 22px rgba(255,180,0,.45);
+    }
 }
 
-/* =========================================
-   DATA ROWS
-   ========================================= */
+/* ===== ROWS ===== */
 .row {
     display: flex;
     justify-content: space-between;
     padding: 9px 0;
     font-size: 14px;
-    border-bottom: 1px solid rgba(255,255,255,0.04);
+    border-bottom: 1px solid rgba(255,255,255,.04);
 }
 .row:last-child { border-bottom: none; }
+.label { color: var(--muted); }
 
-.label {
-    color: var(--text-muted);
-}
-
-/* 🔥 MOLTEN GOLD TEXT */
 .value {
     font-weight: 600;
     font-variant-numeric: tabular-nums;
-    background:
-        linear-gradient(
-            120deg,
-            #5c4300 0%,
-            #b8860b 28%,
-            #ffe8a3 46%,
-            #ffd700 55%,
-            #b8860b 72%,
-            #5c4300 100%
-        );
+    background: linear-gradient(
+        120deg,
+        #4a3500,
+        #8f6a00,
+        #ffd700,
+        #fff2b0,
+        #ffd700,
+        #8f6a00,
+        #4a3500
+    );
     background-size: 200% 200%;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    filter: drop-shadow(0 0 1px rgba(255,215,0,0.18));
 }
 
-/* =========================================
-   DAY PROGRESS — MOLTEN BAR
-   ========================================= */
-.day-wrap {
-    margin-top: 18px;
-}
+/* ===== DAY PROGRESS ===== */
+.day-wrap { margin-top: 18px; }
 
 .day-head {
     display: flex;
     justify-content: space-between;
     font-size: 12px;
-    color: var(--text-muted);
     margin-bottom: 6px;
 }
 
-.day-bar-container {
+#dayPercent {
+    font-weight: 800;
+    font-size: 13px;
+    background: linear-gradient(
+        120deg,
+        #3b2a00,
+        #8f6a00,
+        #ffd700,
+        #fff2b0,
+        #ffd700,
+        #8f6a00,
+        #3b2a00
+    );
+    background-size: 200% 200%;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: gold-breath 4s ease-in-out infinite;
+}
+
+@keyframes gold-breath {
+    0%,100% { background-position: 0% 50%; }
+    50%     { background-position: 100% 50%; }
+}
+
+.bar {
     height: 6px;
     background: var(--bar-bg);
     border-radius: 999px;
     overflow: hidden;
-    box-shadow: inset 0 1px 3px rgba(0,0,0,0.6);
-    position: relative;
 }
 
-.day-fill {
+.fill {
     height: 100%;
     width: 0%;
     border-radius: 999px;
-    position: relative;
-
-    background:
-        linear-gradient(
-            120deg,
-            #5c4300 0%,
-            #b8860b 30%,
-            #ffd700 46%,
-            #fff2b0 50%,
-            #ffd700 54%,
-            #b8860b 70%,
-            #5c4300 100%
-        );
-    background-size: 300% 100%;
-
-    transition: width 1s linear;
-    animation: molten-pass 14s ease-in-out infinite;
-}
-
-@keyframes molten-pass {
-    0%,85% { background-position: 100% 0; }
-    100% { background-position: -100% 0; }
-}
-
-/* Soft molten edge */
-.day-fill::after {
-    content: '';
-    position: absolute;
-    right: 0;
-    inset: 0;
-    width: 14px;
-    background: radial-gradient(
-        circle at left,
-        rgba(255,240,180,0.85),
-        rgba(255,215,0,0.35),
-        transparent 70%
+    background: linear-gradient(
+        120deg,
+        #3b2a00,
+        #8f6a00,
+        #ffd700,
+        #fff2b0,
+        #ffd700,
+        #8f6a00,
+        #3b2a00
     );
-    filter: blur(2px);
+    background-size: 250% 100%;
+    animation: molten-flow 6s linear infinite;
+    transition: width 1s linear;
 }
 
-/* =========================================
-   PARTICLES
-   ========================================= */
+@keyframes molten-flow {
+    from { background-position: 0% 0; }
+    to   { background-position: 250% 0; }
+}
+
+/* ===== PARTICLES ===== */
 </style>
 </head>
 
@@ -218,82 +261,68 @@ body {
 
 <div class="container">
     <div class="title">
-        <span>Time Value Aura</span>
-        <div class="live-badge">LIVE <div class="live-dot"></div></div>
+        <span class="title-text">Time Value Aura</span>
+        <div class="live">LIVE <div class="dot"></div></div>
     </div>
 
     <div class="row"><span class="label">1 second</span><span class="value" id="sec"></span></div>
-    <div class="row"><span class="label">10 minutes</span><span class="value" id="tenMin"></span></div>
-    <div class="row"><span class="label">1 hour</span><span class="value" id="hour"></span></div>
-    <div class="row"><span class="label">12 hours</span><span class="value" id="halfDay"></span></div>
+    <div class="row"><span class="label">10 minutes</span><span class="value" id="ten"></span></div>
+    <div class="row"><span class="label">1 hour</span><span class="value" id="hr"></span></div>
+    <div class="row"><span class="label">12 hours</span><span class="value" id="half"></span></div>
     <div class="row"><span class="label">1 day</span><span class="value" id="day"></span></div>
 
     <div class="day-wrap">
         <div class="day-head">
-            <span>Day Completed</span>
+            <span class="label">Day Completed</span>
             <span id="dayPercent"></span>
         </div>
-        <div class="day-bar-container">
-            <div class="day-fill" id="dayFill"></div>
-        </div>
+        <div class="bar"><div class="fill" id="fill"></div></div>
     </div>
 </div>
 
 <script>
-/* =========================================
-   TIME LOGIC
-   ========================================= */
-function format(sec){
-    sec=Math.ceil(sec);
-    const d=Math.floor(sec/86400);sec%=86400;
-    const h=Math.floor(sec/3600);sec%=3600;
-    const m=Math.floor(sec/60);
-    const s=Math.floor(sec%60);
-    if(d>0)return `${d}d ${h}h`;
-    if(h>0)return `${h}h ${m}m`;
-    if(m>0)return `${m}m ${s}s`;
-    return `${s}s`;
+function fmt(s){
+    s=Math.ceil(s);
+    const d=Math.floor(s/86400);s%=86400;
+    const h=Math.floor(s/3600);s%=3600;
+    const m=Math.floor(s/60);
+    const sec=s%60;
+    if(d) return `${d}d ${h}h`;
+    if(h) return `${h}h ${m}m`;
+    if(m) return `${m}m ${sec}s`;
+    return `${sec}s`;
 }
 
 function update(){
-    document.getElementById("sec").textContent=format(4);
-    document.getElementById("tenMin").textContent=format(2387);
-    document.getElementById("hour").textContent=format(14388);
-    document.getElementById("halfDay").textContent=format(86300);
-    document.getElementById("day").textContent=format(259000);
-}
+    document.getElementById("sec").textContent=fmt(4);
+    document.getElementById("ten").textContent=fmt(2387);
+    document.getElementById("hr").textContent=fmt(14388);
+    document.getElementById("half").textContent=fmt(86300);
+    document.getElementById("day").textContent=fmt(259000);
 
-function dayProgress(){
     const n=new Date();
     const s=n.getHours()*3600+n.getMinutes()*60+n.getSeconds();
-    const p=(s/86400)*100;
+    const p=s/86400*100;
     document.getElementById("dayPercent").textContent=p.toFixed(1)+"%";
-    document.getElementById("dayFill").style.width=p+"%";
+    document.getElementById("fill").style.width=p+"%";
 }
+setInterval(update,1000); update();
 
-setInterval(()=>{update();dayProgress();},1000);
-update();dayProgress();
-
-/* =========================================
-   PARTICLES
-   ========================================= */
+/* PARTICLES */
 const c=document.getElementById("aura-canvas"),x=c.getContext("2d");
-function r(){c.width=innerWidth;c.height=innerHeight;}r();addEventListener("resize",r);
-let p=Array.from({length:(innerWidth*innerHeight)/18000},()=>({
-    x:Math.random()*c.width,
-    y:Math.random()*c.height,
-    s:Math.random()*2,
-    dx:(Math.random()-.5)*.15,
-    dy:(Math.random()-.5)*.15
+function r(){c.width=innerWidth;c.height=innerHeight}r();addEventListener("resize",r);
+let pts=[...Array(innerWidth*innerHeight/18000)].map(()=>({
+    x:Math.random()*c.width,y:Math.random()*c.height,
+    s:Math.random()*2,dx:(Math.random()-.5)*.15,dy:(Math.random()-.5)*.15
 }));
 (function a(){
     x.clearRect(0,0,c.width,c.height);
-    x.fillStyle="rgba(255,215,0,.35)";
-    p.forEach(o=>{
-        o.x+=o.dx;o.y+=o.dy;
-        if(o.x<0)o.x=c.width;if(o.x>c.width)o.x=0;
-        if(o.y<0)o.y=c.height;if(o.y>c.height)o.y=0;
-        x.beginPath();x.arc(o.x,o.y,o.s,0,Math.PI*2);x.fill();
+    x.fillStyle=getComputedStyle(document.documentElement).getPropertyValue('--particle');
+    pts.forEach(p=>{
+        p.x+=p.dx;p.y+=p.dy;
+        if(p.x<0)p.x=c.width;if(p.x>c.width)p.x=0;
+        if(p.y<0)p.y=c.height;if(p.y>c.height)p.y=0;
+        x.beginPath();x.arc(p.x,p.y,p.s,0,Math.PI*2);x.fill();
     });
     requestAnimationFrame(a);
 })();
