--- a/index.html
+++ b/index.html
@@ -1,331 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
+<meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Time Value — Golden Aura</title>
 
 <style>
-:root {
-    --bg: radial-gradient(circle at 50% 0%, #1a1500 0%, #000 80%);
-    --card-bg: rgba(10,10,10,0.65);
-    --border: rgba(255,215,0,0.18);
-    --shadow: 0 30px 70px rgba(0,0,0,.9),
-              inset 0 0 25px rgba(255,215,0,.04);
-
-    --text: #e8e8e8;
-    --muted: rgba(255,255,255,.5);
-    --particle: rgba(255,215,0,.35);
-    --bar-bg: rgba(255,255,255,.08);
+:root{
+  --bg: radial-gradient(circle at 50% 0%, #1a1500 0%, #000 80%);
+  --card: rgba(10,10,10,.65);
+  --border: rgba(255,215,0,.18);
+  --text:#e8e8e8;
+  --muted:rgba(255,255,255,.5);
+  --bar-bg:rgba(255,255,255,.08);
 }
 
-/* ===== LAYOUT ===== */
-body {
-    margin: 0;
-    background: var(--bg);
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-    color: var(--text);
-    overflow: hidden;
+/* ===== Layout ===== */
+body{
+  margin:0;
+  background:var(--bg);
+  min-height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif;
+  color:var(--text);
+  overflow:hidden;
 }
 
-#aura-canvas {
-    position: absolute;
-    inset: 0;
-    pointer-events: none;
+.container{
+  width:340px;
+  padding:22px;
+  border-radius:20px;
+  background:var(--card);
+  backdrop-filter:blur(16px);
+  border:1px solid var(--border);
+  box-shadow:0 30px 70px rgba(0,0,0,.9), inset 0 0 25px rgba(255,215,0,.04);
 }
 
-.container {
-    position: relative;
-    z-index: 2;
-    width: 340px;
-    padding: 22px;
-    border-radius: 20px;
-    background: var(--card-bg);
-    backdrop-filter: blur(16px);
-    border: 1px solid var(--border);
-    box-shadow: var(--shadow);
-    animation: border-breath 18s ease-in-out infinite;
+/* ===== Header ===== */
+.title{
+  display:flex;
+  justify-content:space-between;
+  font-size:13px;
+  font-weight:700;
+  letter-spacing:1px;
+  text-transform:uppercase;
+  padding-bottom:10px;
+  border-bottom:1px solid rgba(255,255,255,.08);
 }
 
-@keyframes border-breath {
-    0%,100% { border-color: rgba(255,215,0,.12); }
-    50%     { border-color: rgba(255,215,0,.3); }
+.title span,
+.live{
+  background:linear-gradient(120deg,#3b2a00,#8f6a00,#ffd700,#fff2b0,#ffd700,#8f6a00,#3b2a00);
+  background-size:300% 300%;
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+  animation:goldFlow 8s linear infinite;
 }
 
-/* ===== HEADER ===== */
-.title {
-    display: flex;
-    justify-content: space-between;
-    padding-bottom: 10px;
-    border-bottom: 1px solid rgba(255,255,255,.08);
+@keyframes goldFlow{
+  from{background-position:0% 50%;}
+  to{background-position:100% 50%;}
 }
 
-/* 🔥 MOLTEN TITLE */
-.title-text {
-    font-size: 13px;
-    font-weight: 700;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-
-    background: linear-gradient(
-        120deg,
-        #3b2a00,
-        #8f6a00,
-        #ffd700,
-        #fff2b0,
-        #ffd700,
-        #8f6a00,
-        #3b2a00
-    );
-    background-size: 300% 300%;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-
-    animation: title-flow 8s ease-in-out infinite;
+.live{
+  font-size:11px;
+  display:flex;
+  align-items:center;
+  gap:6px;
 }
 
-@keyframes title-flow {
-    0%,100% { background-position: 0% 50%; }
-    50%     { background-position: 100% 50%; }
+.dot{
+  width:7px;height:7px;border-radius:50%;
+  background:radial-gradient(circle at 30% 30%,#fff2b0,#ffd700,#8f6a00,#3b2a00);
+  box-shadow:0 0 12px rgba(255,215,0,.6);
+  animation:pulse 2.2s ease-in-out infinite;
 }
 
-/* 🔥 LIVE BADGE */
-.live {
-    display: flex;
-    align-items: center;
-    gap: 6px;
-    font-size: 11px;
-    font-weight: 700;
-
-    background: linear-gradient(
-        120deg,
-        #4a3500,
-        #ffd700,
-        #fff2b0,
-        #ffd700,
-        #4a3500
-    );
-    background-size: 200% 200%;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-
-    animation: live-breath 3.5s ease-in-out infinite;
+@keyframes pulse{
+  0%,100%{transform:scale(1)}
+  50%{transform:scale(1.6)}
 }
 
-@keyframes live-breath {
-    0%,100% { background-position: 0% 50%; }
-    50%     { background-position: 100% 50%; }
+/* ===== Rows ===== */
+.row{
+  display:flex;
+  justify-content:space-between;
+  padding:9px 0;
+  font-size:14px;
+  border-bottom:1px solid rgba(255,255,255,.04);
+}
+.row:last-child{border-bottom:none}
+.label{color:var(--muted)}
+
+.value{
+  font-weight:600;
+  background:linear-gradient(120deg,#4a3500,#8f6a00,#ffd700,#fff2b0,#ffd700,#8f6a00,#4a3500);
+  background-size:200% 200%;
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
 }
 
-/* 🔥 MOLTEN DOT (NOT LED, NOT RED) */
-.dot {
-    width: 7px;
-    height: 7px;
-    border-radius: 50%;
-    position: relative;
+/* ===== Day Progress ===== */
+.day-wrap{margin-top:18px}
 
-    background: radial-gradient(
-        circle at 30% 30%,
-        #fff2b0,
-        #ffd700,
-        #8f6a00,
-        #3b2a00
-    );
-
-    box-shadow:
-        0 0 6px rgba(255,215,0,.8),
-        0 0 14px rgba(255,180,0,.35);
-
-    animation: dot-pulse 2.5s ease-in-out infinite;
+.day-head{
+  display:flex;
+  justify-content:space-between;
+  font-size:12px;
+  margin-bottom:6px;
 }
 
-@keyframes dot-pulse {
-    0%,100% {
-        transform: scale(1);
-        box-shadow:
-            0 0 6px rgba(255,215,0,.6),
-            0 0 12px rgba(255,180,0,.25);
-    }
-    50% {
-        transform: scale(1.6);
-        box-shadow:
-            0 0 10px rgba(255,215,0,.9),
-            0 0 22px rgba(255,180,0,.45);
-    }
+#dayPercent{
+  font-weight:800;
+  background:linear-gradient(120deg,#3b2a00,#8f6a00,#ffd700,#fff2b0,#ffd700,#8f6a00,#3b2a00);
+  background-size:200% 200%;
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
 }
 
-/* ===== ROWS ===== */
-.row {
-    display: flex;
-    justify-content: space-between;
-    padding: 9px 0;
-    font-size: 14px;
-    border-bottom: 1px solid rgba(255,255,255,.04);
-}
-.row:last-child { border-bottom: none; }
-.label { color: var(--muted); }
-
-.value {
-    font-weight: 600;
-    font-variant-numeric: tabular-nums;
-    background: linear-gradient(
-        120deg,
-        #4a3500,
-        #8f6a00,
-        #ffd700,
-        #fff2b0,
-        #ffd700,
-        #8f6a00,
-        #4a3500
-    );
-    background-size: 200% 200%;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+.bar{
+  height:6px;
+  background:var(--bar-bg);
+  border-radius:999px;
+  overflow:hidden;
 }
 
-/* ===== DAY PROGRESS ===== */
-.day-wrap { margin-top: 18px; }
+.fill{
+  height:100%;
+  width:0%;
+  border-radius:999px;
+  position:relative;
 
-.day-head {
-    display: flex;
-    justify-content: space-between;
-    font-size: 12px;
-    margin-bottom: 6px;
+  /* Forward-only asymmetric gradient */
+  background:linear-gradient(
+    90deg,
+    #3b2a00 0%,
+    #8f6a00 20%,
+    #ffd700 40%,
+    #fff2b0 50%,
+    #ffd700 60%,
+    #8f6a00 80%,
+    #3b2a00 100%
+  );
+  background-size:300% 100%;
 }
-
-#dayPercent {
-    font-weight: 800;
-    font-size: 13px;
-    background: linear-gradient(
-        120deg,
-        #3b2a00,
-        #8f6a00,
-        #ffd700,
-        #fff2b0,
-        #ffd700,
-        #8f6a00,
-        #3b2a00
-    );
-    background-size: 200% 200%;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    animation: gold-breath 4s ease-in-out infinite;
-}
-
-@keyframes gold-breath {
-    0%,100% { background-position: 0% 50%; }
-    50%     { background-position: 100% 50%; }
-}
-
-.bar {
-    height: 6px;
-    background: var(--bar-bg);
-    border-radius: 999px;
-    overflow: hidden;
-}
-
-.fill {
-    height: 100%;
-    width: 0%;
-    border-radius: 999px;
-    background: linear-gradient(
-        120deg,
-        #3b2a00,
-        #8f6a00,
-        #ffd700,
-        #fff2b0,
-        #ffd700,
-        #8f6a00,
-        #3b2a00
-    );
-    background-size: 250% 100%;
-    animation: molten-flow 6s linear infinite;
-    transition: width 1s linear;
-}
-
-@keyframes molten-flow {
-    from { background-position: 0% 0; }
-    to   { background-position: 250% 0; }
-}
-
-/* ===== PARTICLES ===== */
 </style>
 </head>
 
 <body>
-<canvas id="aura-canvas"></canvas>
-
 <div class="container">
-    <div class="title">
-        <span class="title-text">Time Value Aura</span>
-        <div class="live">LIVE <div class="dot"></div></div>
-    </div>
+  <div class="title">
+    <span>Time Value Aura</span>
+    <div class="live">LIVE <div class="dot"></div></div>
+  </div>
 
-    <div class="row"><span class="label">1 second</span><span class="value" id="sec"></span></div>
-    <div class="row"><span class="label">10 minutes</span><span class="value" id="ten"></span></div>
-    <div class="row"><span class="label">1 hour</span><span class="value" id="hr"></span></div>
-    <div class="row"><span class="label">12 hours</span><span class="value" id="half"></span></div>
-    <div class="row"><span class="label">1 day</span><span class="value" id="day"></span></div>
+  <div class="row"><span class="label">1 second</span><span class="value">4s</span></div>
+  <div class="row"><span class="label">10 minutes</span><span class="value">39m 47s</span></div>
+  <div class="row"><span class="label">1 hour</span><span class="value">3h 59m</span></div>
+  <div class="row"><span class="label">12 hours</span><span class="value">23h 58m</span></div>
+  <div class="row"><span class="label">1 day</span><span class="value">2d 23h</span></div>
 
-    <div class="day-wrap">
-        <div class="day-head">
-            <span class="label">Day Completed</span>
-            <span id="dayPercent"></span>
-        </div>
-        <div class="bar"><div class="fill" id="fill"></div></div>
+  <div class="day-wrap">
+    <div class="day-head">
+      <span class="label">Day Completed</span>
+      <span id="dayPercent">0%</span>
     </div>
+    <div class="bar"><div class="fill" id="fill"></div></div>
+  </div>
 </div>
 
 <script>
-function fmt(s){
-    s=Math.ceil(s);
-    const d=Math.floor(s/86400);s%=86400;
-    const h=Math.floor(s/3600);s%=3600;
-    const m=Math.floor(s/60);
-    const sec=s%60;
-    if(d) return `${d}d ${h}h`;
-    if(h) return `${h}h ${m}m`;
-    if(m) return `${m}m ${sec}s`;
-    return `${sec}s`;
+/* ===== True 60fps molten motion ===== */
+const fill = document.getElementById("fill");
+let offset = 0;
+
+function animate(){
+  offset += 0.15;                 // speed (lower = calmer)
+  fill.style.backgroundPosition = `${offset}px 0`;
+  requestAnimationFrame(animate);
 }
+requestAnimationFrame(animate);
 
-function update(){
-    document.getElementById("sec").textContent=fmt(4);
-    document.getElementById("ten").textContent=fmt(2387);
-    document.getElementById("hr").textContent=fmt(14388);
-    document.getElementById("half").textContent=fmt(86300);
-    document.getElementById("day").textContent=fmt(259000);
-
-    const n=new Date();
-    const s=n.getHours()*3600+n.getMinutes()*60+n.getSeconds();
-    const p=s/86400*100;
-    document.getElementById("dayPercent").textContent=p.toFixed(1)+"%";
-    document.getElementById("fill").style.width=p+"%";
+/* ===== Day progress ===== */
+function updateDay(){
+  const n=new Date();
+  const s=n.getHours()*3600+n.getMinutes()*60+n.getSeconds();
+  const p=(s/86400)*100;
+  document.getElementById("dayPercent").textContent=p.toFixed(1)+"%";
+  fill.style.width=p+"%";
 }
-setInterval(update,1000); update();
-
-/* PARTICLES */
-const c=document.getElementById("aura-canvas"),x=c.getContext("2d");
-function r(){c.width=innerWidth;c.height=innerHeight}r();addEventListener("resize",r);
-let pts=[...Array(innerWidth*innerHeight/18000)].map(()=>({
-    x:Math.random()*c.width,y:Math.random()*c.height,
-    s:Math.random()*2,dx:(Math.random()-.5)*.15,dy:(Math.random()-.5)*.15
-}));
-(function a(){
-    x.clearRect(0,0,c.width,c.height);
-    x.fillStyle=getComputedStyle(document.documentElement).getPropertyValue('--particle');
-    pts.forEach(p=>{
-        p.x+=p.dx;p.y+=p.dy;
-        if(p.x<0)p.x=c.width;if(p.x>c.width)p.x=0;
-        if(p.y<0)p.y=c.height;if(p.y>c.height)p.y=0;
-        x.beginPath();x.arc(p.x,p.y,p.s,0,Math.PI*2);x.fill();
-    });
-    requestAnimationFrame(a);
-})();
+setInterval(updateDay,1000);
+updateDay();
 </script>
 </body>
 </html>
