--- a/index.html
+++ b/index.html
@@ -1,198 +1,256 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
+<meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Time Value — Golden Aura</title>
 
 <style>
-:root{
-  --bg: radial-gradient(circle at 50% 0%, #1a1500 0%, #000 80%);
-  --card: rgba(10,10,10,.65);
-  --border: rgba(255,215,0,.18);
-  --text:#e8e8e8;
-  --muted:rgba(255,255,255,.5);
-  --bar-bg:rgba(255,255,255,.08);
+:root {
+    --bg: radial-gradient(circle at 50% 0%, #1a1500 0%, #000 80%);
+    --card-bg: rgba(10,10,10,0.65);
+    --border: rgba(255,215,0,0.18);
+    --shadow: 0 30px 70px rgba(0,0,0,.9),
+              inset 0 0 25px rgba(255,215,0,.04);
+    --text: #e8e8e8;
+    --muted: rgba(255,255,255,.5);
+    --particle: rgba(255,215,0,.35);
+    --bar-bg: rgba(255,255,255,.08);
 }
 
-/* ===== Layout ===== */
-body{
-  margin:0;
-  background:var(--bg);
-  min-height:100vh;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,sans-serif;
-  color:var(--text);
-  overflow:hidden;
+/* ===== LAYOUT ===== */
+body {
+    margin: 0;
+    background: var(--bg);
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+    color: var(--text);
+    overflow: hidden;
 }
 
-.container{
-  width:340px;
-  padding:22px;
-  border-radius:20px;
-  background:var(--card);
-  backdrop-filter:blur(16px);
-  border:1px solid var(--border);
-  box-shadow:0 30px 70px rgba(0,0,0,.9), inset 0 0 25px rgba(255,215,0,.04);
+#aura-canvas {
+    position: absolute;
+    inset: 0;
+    pointer-events: none;
 }
 
-/* ===== Header ===== */
-.title{
-  display:flex;
-  justify-content:space-between;
-  font-size:13px;
-  font-weight:700;
-  letter-spacing:1px;
-  text-transform:uppercase;
-  padding-bottom:10px;
-  border-bottom:1px solid rgba(255,255,255,.08);
+.container {
+    position: relative;
+    z-index: 2;
+    width: 340px;
+    padding: 22px;
+    border-radius: 20px;
+    background: var(--card-bg);
+    backdrop-filter: blur(16px);
+    border: 1px solid var(--border);
+    box-shadow: var(--shadow);
 }
 
-.title span,
-.live{
-  background:linear-gradient(120deg,#3b2a00,#8f6a00,#ffd700,#fff2b0,#ffd700,#8f6a00,#3b2a00);
-  background-size:300% 300%;
-  -webkit-background-clip:text;
-  -webkit-text-fill-color:transparent;
-  animation:goldFlow 8s linear infinite;
+/* ===== HEADER ===== */
+.title {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 10px;
+    border-bottom: 1px solid rgba(255,255,255,.08);
 }
 
-@keyframes goldFlow{
-  from{background-position:0% 50%;}
-  to{background-position:100% 50%;}
+.title-text {
+    font-size: 13px;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    background: linear-gradient(
+        120deg,
+        #3b2a00,
+        #8f6a00,
+        #ffd700,
+        #fff2b0,
+        #ffd700,
+        #8f6a00,
+        #3b2a00
+    );
+    background-size: 300% 300%;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
-.live{
-  font-size:11px;
-  display:flex;
-  align-items:center;
-  gap:6px;
+.live {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    font-size: 11px;
+    font-weight: 700;
+    color: #ffd700;
 }
 
-.dot{
-  width:7px;height:7px;border-radius:50%;
-  background:radial-gradient(circle at 30% 30%,#fff2b0,#ffd700,#8f6a00,#3b2a00);
-  box-shadow:0 0 12px rgba(255,215,0,.6);
-  animation:pulse 2.2s ease-in-out infinite;
+.dot {
+    width: 7px;
+    height: 7px;
+    border-radius: 50%;
+    background: radial-gradient(circle at 30% 30%, #fff2b0, #ffd700, #8f6a00);
+    box-shadow: 0 0 8px rgba(255,215,0,.8);
 }
 
-@keyframes pulse{
-  0%,100%{transform:scale(1)}
-  50%{transform:scale(1.6)}
+/* ===== ROWS ===== */
+.row {
+    display: flex;
+    justify-content: space-between;
+    padding: 9px 0;
+    font-size: 14px;
+    border-bottom: 1px solid rgba(255,255,255,.04);
+}
+.label { color: var(--muted); }
+
+.value {
+    font-weight: 600;
+    background: linear-gradient(
+        120deg,
+        #4a3500,
+        #8f6a00,
+        #ffd700,
+        #fff2b0,
+        #ffd700,
+        #8f6a00,
+        #4a3500
+    );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
-/* ===== Rows ===== */
-.row{
-  display:flex;
-  justify-content:space-between;
-  padding:9px 0;
-  font-size:14px;
-  border-bottom:1px solid rgba(255,255,255,.04);
-}
-.row:last-child{border-bottom:none}
-.label{color:var(--muted)}
+/* ===== DAY PROGRESS ===== */
+.day-wrap { margin-top: 18px; }
 
-.value{
-  font-weight:600;
-  background:linear-gradient(120deg,#4a3500,#8f6a00,#ffd700,#fff2b0,#ffd700,#8f6a00,#4a3500);
-  background-size:200% 200%;
-  -webkit-background-clip:text;
-  -webkit-text-fill-color:transparent;
+.day-head {
+    display: flex;
+    justify-content: space-between;
+    font-size: 12px;
+    margin-bottom: 6px;
 }
 
-/* ===== Day Progress ===== */
-.day-wrap{margin-top:18px}
-
-.day-head{
-  display:flex;
-  justify-content:space-between;
-  font-size:12px;
-  margin-bottom:6px;
+#dayPercent {
+    font-weight: 800;
+    background: linear-gradient(
+        120deg,
+        #3b2a00,
+        #8f6a00,
+        #ffd700,
+        #fff2b0,
+        #ffd700,
+        #8f6a00,
+        #3b2a00
+    );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
-#dayPercent{
-  font-weight:800;
-  background:linear-gradient(120deg,#3b2a00,#8f6a00,#ffd700,#fff2b0,#ffd700,#8f6a00,#3b2a00);
-  background-size:200% 200%;
-  -webkit-background-clip:text;
-  -webkit-text-fill-color:transparent;
+/* ===== SEAMLESS BAR ===== */
+.bar {
+    height: 6px;
+    background: var(--bar-bg);
+    border-radius: 999px;
+    overflow: hidden;
+    position: relative;
 }
 
-.bar{
-  height:6px;
-  background:var(--bar-bg);
-  border-radius:999px;
-  overflow:hidden;
+/* Base gold */
+.fill {
+    height: 100%;
+    width: 0%;
+    position: relative;
+    border-radius: 999px;
+    background: linear-gradient(
+        120deg,
+        #3b2a00,
+        #8f6a00,
+        #ffd700,
+        #b8860b,
+        #3b2a00
+    );
+    overflow: hidden;
+    transition: width 1s linear;
 }
 
-.fill{
-  height:100%;
-  width:0%;
-  border-radius:999px;
-  position:relative;
+/* Flow container */
+.flow {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 200%;
+    height: 100%;
+    display: flex;
+    animation: flow-move 4s linear infinite;
+    will-change: transform;
+}
 
-  /* Forward-only asymmetric gradient */
-  background:linear-gradient(
-    90deg,
-    #3b2a00 0%,
-    #8f6a00 20%,
-    #ffd700 40%,
-    #fff2b0 50%,
-    #ffd700 60%,
-    #8f6a00 80%,
-    #3b2a00 100%
-  );
-  background-size:300% 100%;
+/* Light band */
+.band {
+    width: 50%;
+    height: 100%;
+    background: linear-gradient(
+        90deg,
+        transparent 0%,
+        rgba(255,240,180,.25) 35%,
+        rgba(255,255,255,.45) 50%,
+        rgba(255,240,180,.25) 65%,
+        transparent 100%
+    );
+}
+
+/* Duplicate band */
+.band.clone {
+    margin-left: 0;
+}
+
+@keyframes flow-move {
+    from { transform: translateX(0); }
+    to   { transform: translateX(-50%); }
 }
 </style>
 </head>
 
 <body>
+<canvas id="aura-canvas"></canvas>
+
 <div class="container">
-  <div class="title">
-    <span>Time Value Aura</span>
-    <div class="live">LIVE <div class="dot"></div></div>
-  </div>
-
-  <div class="row"><span class="label">1 second</span><span class="value">4s</span></div>
-  <div class="row"><span class="label">10 minutes</span><span class="value">39m 47s</span></div>
-  <div class="row"><span class="label">1 hour</span><span class="value">3h 59m</span></div>
-  <div class="row"><span class="label">12 hours</span><span class="value">23h 58m</span></div>
-  <div class="row"><span class="label">1 day</span><span class="value">2d 23h</span></div>
-
-  <div class="day-wrap">
-    <div class="day-head">
-      <span class="label">Day Completed</span>
-      <span id="dayPercent">0%</span>
+    <div class="title">
+        <span class="title-text">Time Value Aura</span>
+        <div class="live">LIVE <div class="dot"></div></div>
     </div>
-    <div class="bar"><div class="fill" id="fill"></div></div>
-  </div>
+
+    <div class="row"><span class="label">1 second</span><span class="value" id="sec"></span></div>
+    <div class="row"><span class="label">10 minutes</span><span class="value" id="ten"></span></div>
+    <div class="row"><span class="label">1 hour</span><span class="value" id="hr"></span></div>
+    <div class="row"><span class="label">12 hours</span><span class="value" id="half"></span></div>
+    <div class="row"><span class="label">1 day</span><span class="value" id="day"></span></div>
+
+    <div class="day-wrap">
+        <div class="day-head">
+            <span class="label">Day Completed</span>
+            <span id="dayPercent"></span>
+        </div>
+        <div class="bar">
+            <div class="fill" id="fill">
+                <div class="flow">
+                    <div class="band"></div>
+                    <div class="band clone"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <script>
-/* ===== True 60fps molten motion ===== */
-const fill = document.getElementById("fill");
-let offset = 0;
-
-function animate(){
-  offset += 0.15;                 // speed (lower = calmer)
-  fill.style.backgroundPosition = `${offset}px 0`;
-  requestAnimationFrame(animate);
+function update(){
+    const n=new Date();
+    const s=n.getHours()*3600+n.getMinutes()*60+n.getSeconds();
+    const p=s/86400*100;
+    document.getElementById("dayPercent").textContent=p.toFixed(1)+"%";
+    document.getElementById("fill").style.width=p+"%";
 }
-requestAnimationFrame(animate);
-
-/* ===== Day progress ===== */
-function updateDay(){
-  const n=new Date();
-  const s=n.getHours()*3600+n.getMinutes()*60+n.getSeconds();
-  const p=(s/86400)*100;
-  document.getElementById("dayPercent").textContent=p.toFixed(1)+"%";
-  fill.style.width=p+"%";
-}
-setInterval(updateDay,1000);
-updateDay();
+setInterval(update,1000); update();
 </script>
 </body>
 </html>
